--- a/hive/first_app/templates/base.html
+++ b/hive/first_app/templates/base.html
@@ -20,6 +20,7 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Link</a>
 				</li>
+				{% if request.user is not None %}
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Dropdown
@@ -31,9 +32,11 @@
 						<a class="dropdown-item" href="#">Something else here</a>
 					</div>
 				</li>
+				{% else %}
 				<li class="nav-item">
 					<a class="nav-link disabled" href="#">Disabled</a>
 				</li>
+			{% endif %}	
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
 				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
