--- a/hive/first_app/templates/index.html
+++ b/hive/first_app/templates/index.html
@@ -4,4 +4,7 @@
 
 {% block content %}
 Hello this is the home page
+Logged: {{user.id}}
+username: {{userprofile.bio}}
+email: {{user.email}}
 {% endblock%}
