--- a/hive/first_app/templates/base.html
+++ b/hive/first_app/templates/base.html
@@ -8,19 +8,19 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand " href="{% url 'first_app:homepage'%}" id="hive_logo_a">
+		<a class="navbar-brand " href="{% url 'first_app:home'%}" id="hive_logo_a">
 			<img src="{% static 'images/hive_logo.png'%}" id="hive_logo">
 		</a>
 		
 		<div class="collapse navbar-collapse">
 			<ul class="navbar-nav mr-auto pl-5">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="{% url 'first_app:home' %}"">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Link</a>
 				</li>
-				{% if request.user is not None %}
+				{% if logged_in is not None %}
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Dropdown
@@ -32,11 +32,31 @@
 						<a class="dropdown-item" href="#">Something else here</a>
 					</div>
 				</li>
-				{% else %}
+
 				<li class="nav-item">
 					<a class="nav-link disabled" href="#">Disabled</a>
 				</li>
-			{% endif %}	
+				<div class="button-logout">
+					<a href="{% url 'login_app:loginpage' %}" class="btn btn-danger btn-lg active " role="button" aria-pressed="true">Logout</a>
+				</div>
+				<div class="button-signup inset">
+					<img src="{% static 'images/bill.png'%}" >
+				</div>
+				<div class="user-profile">
+					<p>{{user.username}} </p>
+				</div>
+
+				{% else %}
+				
+				<div class="button-login">
+					<a href="{% url 'login_app:loginpage' %}" class="btn btn-danger btn-lg active " role="button" aria-pressed="true">Login</a>
+				</div>
+				<div class="button-signup">
+					<a href="{% url 'login_app:signup' %}" class="btn btn-danger btn-lg active " role="button" aria-pressed="true">Sign up</a>
+				</div>
+			
+				
+				{% endif %}	
 			</ul>
 		</div>
 	</nav>  
