--- a/hive/hive/static/css/styles.css
+++ b/hive/hive/static/css/styles.css
@@ -11,3 +11,51 @@
 	color: red;
 
 }
+
+.button-login {
+	position: relative;
+	left : 1200px;
+}
+
+.button-signup {
+	position: relative;
+	left : 970px;
+}
+
+.btn-danger {
+	background-color: #ffd32a !important;
+}
+
+.inset {
+  width: 55px;
+  position: relative;
+  left:750px;
+  height: 55px;
+  border-radius: 50%;
+  box-shadow:
+    inset 0 0 0 2px rgba(255,255,255,0.6), 
+    0 1px 1px rgba(0,0,0,0.1);
+  background-color: transparent !important;
+  z-index: 999;
+}
+
+.inset img {
+  border-radius: inherit;
+  width: inherit;
+  height: inherit;
+  display: block;
+  position: relative;
+  z-index: 998;
+}
+
+.user-profile {
+	position: relative;
+	left: 770px;
+	top: 15px;
+}
+
+.button-logout{
+	position: relative;
+	left: 1000px;
+	top: 5px;
+}
