little_change_to_base.html

--- a/hive/first_app/templates/base.html
+++ b/hive/first_app/templates/base.html
@@ -37,7 +37,7 @@
 					<a class="nav-link disabled" href="#">Disabled</a>
 				</li>
 				<div class="button-logout">
-					<a href="{% url 'login_app:loginpage' %}" class="btn btn-danger btn-lg active " role="button" aria-pressed="true">Logout</a>
+					<a href="{% url 'login_app:logging_out' %}" class="btn btn-danger btn-lg active " role="button" aria-pressed="true">Logout</a>
 				</div>
 				<div class="button-signup inset">
 					<img src="{% static 'images/bill.png'%}" >
