--- a/hive/first_app/templates/base.html
+++ b/hive/first_app/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 {% load staticfiles %}
 <html>
 <head>
@@ -20,7 +20,7 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Link</a>
 				</li>
-				{% if logged_in is not None %}
+				{% if logged_in %}
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Dropdown
