changes about publishing a tweet

--- a/hive/first_app/templates/home.html
+++ b/hive/first_app/templates/home.html
@@ -19,7 +19,7 @@
 				    <h5 class="card-title">
 				    	{{tweet.text}}	
 					</h5>
-				    <p class="card-text">Tweet Date : {{tweet.date}}> </p>
+				    <p class="card-text">Tweet Date : {{tweet.date}} </p>
 					By {{tweet.user.user.username}} 
 	  			</div>
 			</div>
