--- a/hive/hive/static/css/styles.css
+++ b/hive/hive/static/css/styles.css
@@ -14,12 +14,12 @@
 
 .button-login {
 	position: relative;
-	left : 1200px;
+	left : 430%;
 }
 
 .button-signup {
 	position: relative;
-	left : 970px;
+	left : 355%;
 }
 
 .btn-danger {
@@ -86,9 +86,15 @@
     clear: both;
 }
 
+.button-follow{
+	position: relative;
+	left : 75%;
+	bottom: 50px;
+}
 
 
-
-
+.btn-primary {
+	background-color: #16a085 !important;
+}
 
 
