--- a/hive/first_app/templates/base.html
+++ b/hive/first_app/templates/base.html
@@ -15,7 +15,7 @@
 		<div class="collapse navbar-collapse">
 			<ul class="navbar-nav mr-auto pl-5">
 				<li class="nav-item">
-					<a class="nav-link" href="{% url 'first_app:home' %}"">Home <span class="sr-only">(current)</span></a>
+					<a class="nav-link" href="{% url 'first_app:home' %}">Home</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Link</a>
