--- a/hive/hive/static/css/styles.css
+++ b/hive/hive/static/css/styles.css
@@ -143,7 +143,19 @@
     
 }
 
+.like-button{
+	height: 30px;
+	width: 30px;
+	position: relative;
+	top: 25px;
+}
 
+.dislike-button{
+	height: 30px;
+	width: 30px;
+	position: relative;
+	top: 25px;
+}
 
 
 
