--- a/hive/first_app/templates/all_users.html
+++ b/hive/first_app/templates/all_users.html
@@ -17,7 +17,7 @@
 
 	  			<div class="card-body">
 				    <h5 class="card-title">
-				    	 {{user.user.username}} 	
+				    	<a href="{% url 'first_app:profile_page' user.user.username%}">{{user.user.username}}</a>	
 					</h5>
 				    <p class="card-text"></p>
 					 {{user.bio}}
