--- a/hive/first_app/templates/publish_a_tweet.html
+++ b/hive/first_app/templates/publish_a_tweet.html
@@ -13,5 +13,34 @@
 			</form>
 		</div>
 
+	</div>
+
+	<div style= "position:relative;right: -38%">
+		<h1>The lasts Tweets are : </h1>
+	</div>
+
+	<br>
+				
+	{% for tweet in list %}
+
+	<div class="card border-info mx-auto" style="max-width: 50rem;">
+		<div class="card-header"> 
+			Tweet id : {{tweet.id}}
+		</div>
+
+		<div class="card-body">
+			<h5 class="card-title"> {{tweet.text}} </h5>
+			<p class="card-text">Tweet Date : {{tweet.date}} </p>
+			By <a href="{% url 'first_app:profile_page' username=tweet.user.user.username %}">{{tweet.user.user.username}} </a>
+		</div>
+	</div>
+
+
+	<div>
+		<h3>{{tweet.user.name}}</h3>
+		<p>
+	</div>
+	{% endfor %}
+
 
 {% endblock %}
